fdo#56679, fdo#65710 : fix for import and export of underline color

Change-Id: Ifc45900d73802ef99c55d7af4ee04314dd04f1c5